--- a/PC_2.ipynb
+++ b/PC_2.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RkLlWzjlRZT7",
-        "outputId": "2281dfd8-c4e6-40d6-9b67-2cf40de185ba"
+        "outputId": "0311a194-4864-42ee-de6f-81ff548edc97"
       },
       "source": [
         "#Habilitar si usas google colab\n",
@@ -41,7 +41,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -60,7 +60,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -83,13 +83,13 @@
         "# Utilizando google colab ruta Franz\n",
         "#data = pd.read_csv('/content/drive/MyDrive/IA_PC2/train.csv', chunksize=1000000 , index_col=0)\n",
         "# Utilizando google colab ruta Abel\n",
-        "data = pd.read_csv('/content/drive/MyDrive/IA_PC2/train.csv', chunksize=1000000 , index_col=0)\n",
+        "#data = pd.read_csv('/content/drive/MyDrive/IA_PC2/train.csv', chunksize=1000000 , index_col=0)\n",
         "# Utilizando google colab ruta Eros\n",
-        "#data = pd.read_csv('/content/drive/MyDrive/IA-PC2/train.csv', chunksize=1000000 , index_col=0)\n",
+        "data = pd.read_csv('/content/drive/MyDrive/IA-PC2/train.csv', chunksize=1000000 , index_col=0)\n",
         "# Desde local (jupyter notebook)\n",
         "#data = pd.read_csv('train.csv', chunksize=42000000)"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -97,15 +97,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 440
+          "height": 450
         },
         "id": "vQ5-psE3qKBm",
-        "outputId": "376425c7-cf70-4c83-b194-9ec522473a69"
+        "outputId": "fa4a0533-625e-4864-c24e-cf68e9a8809f"
       },
       "source": [
         "data.get_chunk()"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,7 +285,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -297,7 +297,7 @@
       "source": [
         "df = data.get_chunk() "
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -307,12 +307,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a0JN28HWNSgi",
-        "outputId": "6704628d-5547-48ec-87b0-71b75828c1db"
+        "outputId": "472d98e2-952d-4757-dc9e-6ce97dc4a62b"
       },
       "source": [
         "print(df.head())"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,12 +357,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ay2Gv8QdNSgk",
-        "outputId": "04786ba7-8dac-4e5e-fe62-73253e5e60a6"
+        "outputId": "d3a990d8-2d19-4174-e0d7-6c3654e01e7c"
       },
       "source": [
         "print(df.isnull().sum())"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,13 +387,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Jw9dB6CvNSgk",
-        "outputId": "ae8c0693-8a23-49ae-d891-63003ae9f7d8"
+        "outputId": "506a3702-a080-49de-a81e-332fcf5f2e79"
       },
       "source": [
         "df.dropna(inplace = True)\n",
         "print(df.isnull().sum())"
       ],
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +428,7 @@
       "source": [
         "df['pickup_datetime'] = pd.to_datetime(df['pickup_datetime'], format='%Y-%m-%d %H:%M:%S UTC')"
       ],
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -439,7 +439,7 @@
       "source": [
         "df['pickup_hour'] =df['pickup_datetime'].dt.hour"
       ],
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -449,12 +449,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pz_CDYvXNSgl",
-        "outputId": "cd9cd8e4-ec1a-447e-9acf-f9bf245b2aa2"
+        "outputId": "d698087b-6cf0-46f7-9026-7e1b208b06ff"
       },
       "source": [
         "print(df['pickup_hour'])"
       ],
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,12 +494,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IkWzw7u3NSgl",
-        "outputId": "8f089623-1cac-4020-966e-edda90ed0ddf"
+        "outputId": "e3c98b89-b76b-4dcf-c43c-08ba71c96d55"
       },
       "source": [
         "print(df['passenger_count'].value_counts())"
       ],
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +526,7 @@
       "source": [
         "df.loc[df.passenger_count > 7, 'passenger_count'] = 7"
       ],
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -536,12 +536,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ULf3Jad7NSgm",
-        "outputId": "430f0844-3466-4e76-94a5-d2553066899f"
+        "outputId": "091e4b9e-212c-4aa1-d492-726c7f7b5b28"
       },
       "source": [
         "print(df['passenger_count'].value_counts())"
       ],
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,13 +567,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bxqDA-mYNSgm",
-        "outputId": "61136d01-bda6-47bd-c559-6f7a32b919d6"
+        "outputId": "22b1272e-47ed-4513-dc07-9ca5d567ea77"
       },
       "source": [
         "print(df.dtypes)\n",
         "print(df.head())"
       ],
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,15 +606,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 230
+          "height": 320
         },
         "id": "v2ZR-zo2OnRG",
-        "outputId": "7fbf7f75-3e4a-4c98-8d39-6580011dea8f"
+        "outputId": "99778967-df14-46ce-bcfc-5557379b9539"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -734,7 +734,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 20
         }
       ]
     },
@@ -746,7 +746,7 @@
       "source": [
         ""
       ],
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -793,7 +793,7 @@
         "    lambda fila: 2*radioTierra * asin(sqrt(0.5 - cos((fila.dropoff_latitude - fila.pickup_latitude) * p)/2 + cos(fila.pickup_latitude * p) * cos(fila.dropoff_latitude * p) * (1 - cos((fila.dropoff_longitude - fila.pickup_longitude) * p)) / 2)) \n",
         ", axis=1)"
       ],
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -801,15 +801,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 381
+          "height": 580
         },
         "id": "6LT1lCs5PPm3",
-        "outputId": "3445838f-e500-4ef4-eb65-f4c00a03ac3b"
+        "outputId": "272049f0-c3c5-42af-a39c-335d3b79766c"
       },
       "source": [
         "df.head(10)"
       ],
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1001,7 +1001,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 22
         }
       ]
     },
@@ -1024,7 +1024,7 @@
         "##Se crea una nueva columna con valores \"ok\" y \"no\"\n",
         "df[\"booleano\"]= np.where((df[\"distancia_recorrida\"]>100)& (df[\"fare_amount\"]<20),'no','ok')\n"
       ],
-      "execution_count": 22,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1032,15 +1032,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 440
+          "height": 640
         },
         "id": "5yq3GjEpCZBH",
-        "outputId": "80fafeed-5a3e-46b8-95b6-8b4c2761d58b"
+        "outputId": "c4724987-95e6-47bc-a916-bb20d355453f"
       },
       "source": [
         "df"
       ],
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1259,7 +1259,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 24
         }
       ]
     },
@@ -1273,7 +1273,7 @@
         "indices = df[df['booleano']=='no'].index\n",
         "df.drop(indices, inplace=True)"
       ],
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1281,17 +1281,17 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 440
+          "height": 640
         },
         "id": "jZYFLWTYEeEc",
-        "outputId": "56b2f97c-0ed3-4ece-c0f8-09673f70746a"
+        "outputId": "5791de0d-6ba8-4a36-bb8f-b801d4a1c126"
       },
       "source": [
         "#eliminamos la columna booleano\n",
         "df.drop(columns=[\"booleano\"], inplace=True)\n",
         "df"
       ],
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1497,7 +1497,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 26
         }
       ]
     },
@@ -1526,14 +1526,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lVzpsamUNSgn",
-        "outputId": "58d47b71-f12a-449e-e4bc-537b74006ee0"
+        "outputId": "6b3c4855-0498-4cae-d477-acffb37f9b38"
       },
       "source": [
         "X = df[['passenger_count','pickup_hour','distancia_recorrida']]\n",
         "y = df.fare_amount\n",
         "print(X)"
       ],
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1568,7 +1568,7 @@
         "transformer = RobustScaler(quantile_range = (0.1,0.9)).fit(X)\n",
         "X = transformer.transform(X)"
       ],
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1578,12 +1578,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5850c7a-2e39-43e5-e5f6-bc0764568964"
+        "outputId": "9dde04d4-dfa2-40cf-dffc-97ad68068e1e"
       },
       "source": [
         "print(X)"
       ],
-      "execution_count": 28,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1609,7 +1609,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)"
       ],
-      "execution_count": 29,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1630,7 +1630,7 @@
         "y1=a1.predict(X_test)\n",
         "y2=a2.predict(X_test)"
       ],
-      "execution_count": 30,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1640,14 +1640,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DETP6NqKVSaG",
-        "outputId": "6b0ea3dc-8072-4839-8bfc-b5b12fd05ecf"
+        "outputId": "129db1d3-8c01-43e2-a7e8-7b0cdb10a370"
       },
       "source": [
         "print(regressor1)\n",
         "print()\n",
         "print(regressor2)"
       ],
-      "execution_count": 31,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -1677,7 +1677,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N5ucZPw1VVRW",
-        "outputId": "e9df45f6-6f1d-4b29-e4a4-8ad84be796b4"
+        "outputId": "96e8aeb5-31b6-46f1-d7d6-4b5d5e0d69e9"
       },
       "source": [
         "print(\"Costo de viaje de los datos de prueba\")\n",
@@ -1690,7 +1690,7 @@
         "print(\"Segundo modelo\")\n",
         "print(y2)"
       ],
-      "execution_count": 32,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -1738,7 +1738,7 @@
       "source": [
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 33,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1758,10 +1758,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 403
+          "height": 404
         },
         "id": "CSjy-exHBu5a",
-        "outputId": "cc0a00d1-f404-4e90-bdfe-350ce407030c"
+        "outputId": "aa85d95f-f788-4ef2-e813-be98d084e957"
       },
       "source": [
         "plt.figure(figsize=(10,6))\n",
@@ -1775,7 +1775,7 @@
         "plt.title(\"Primera prediccion de costo\")\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1806,10 +1806,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 403
+          "height": 404
         },
         "id": "qiVksNXQO0uC",
-        "outputId": "f720200b-1013-4010-f65a-8e838cb1807d"
+        "outputId": "eae863a0-541e-47d2-b115-a57ec18b9538"
       },
       "source": [
         "plt.figure(figsize=(10,6))\n",
@@ -1823,7 +1823,7 @@
         "plt.title(\"Segunda prediccion de costo\")\n",
         "plt.show()"
       ],
-      "execution_count": 41,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1874,7 +1874,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vPdlSgC_Vp6G",
-        "outputId": "de6b6dfa-3c2c-4f77-cec1-d4b0e5b2354f"
+        "outputId": "061ba952-6d6f-4ecf-cf38-f74ae9180e8a"
       },
       "source": [
         "from sklearn.metrics import mean_absolute_error\n",
@@ -1882,7 +1882,7 @@
         "print(mean_absolute_error(y_test, y1))\n",
         "print(mean_absolute_error(y_test, y2))"
       ],
-      "execution_count": 35,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -1900,7 +1900,7 @@
         "id": "Z8jNwe_4VsYf"
       },
       "source": [
-        "**Error Cuadratico medio**"
+        "**Error cuadrático medio**"
       ]
     },
     {
@@ -1919,7 +1919,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rxn5z6R5VyuX",
-        "outputId": "c61232f1-79c2-4be5-844f-4ef85217044e"
+        "outputId": "260b0941-9bb3-40e3-e935-20564aeb93f4"
       },
       "source": [
         "from sklearn.metrics import mean_squared_error\n",
@@ -1936,7 +1936,7 @@
         "print(mean_squared_error(y_test, y1,squared=False))\n",
         "print(mean_squared_error(y_test, y2,squared=False))\n"
       ],
-      "execution_count": 36,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -1978,7 +1978,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SaupMX8_WDrn",
-        "outputId": "0816bade-3651-48b5-aa55-ba1f6297ef20"
+        "outputId": "57e9e63e-9daa-4b6f-91a7-ea668cb49d0e"
       },
       "source": [
         "from sklearn.metrics import max_error\n",
@@ -1986,7 +1986,7 @@
         "print(max_error(y_test, y1))\n",
         "print(max_error(y_test, y2))"
       ],
-      "execution_count": 37,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -2023,7 +2023,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cx5MXxX7Wilf",
-        "outputId": "ba6b8c3e-f9a7-4751-b58a-e292d6d5041d"
+        "outputId": "097af761-0f63-4954-bcfc-b523fd8737be"
       },
       "source": [
         "from sklearn.metrics import median_absolute_error\n",
@@ -2031,7 +2031,7 @@
         "print(median_absolute_error(y_test, y1))\n",
         "print(median_absolute_error(y_test, y2))"
       ],
-      "execution_count": 38,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -2068,7 +2068,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vlvx2fkrW_rX",
-        "outputId": "65c3871f-e0d3-4570-b0eb-ddaeb85b0e78"
+        "outputId": "249c9a46-5f60-4cc7-b6ef-4969c2f2fc1e"
       },
       "source": [
         "from sklearn.metrics import explained_variance_score\n",
@@ -2076,7 +2076,7 @@
         "print(explained_variance_score(y_test, y1))\n",
         "print(explained_variance_score(y_test, y2))"
       ],
-      "execution_count": 39,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -2113,7 +2113,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KKHJftBIXVmB",
-        "outputId": "f8984566-8ca5-4223-cbae-fdc7eb51441b"
+        "outputId": "3c9945c1-ca3d-4ceb-82ee-13ba97e0227f"
       },
       "source": [
         "from sklearn.metrics import r2_score\n",
@@ -2121,7 +2121,7 @@
         "print(r2_score(y_test, y1))\n",
         "print(r2_score(y_test, y2))"
       ],
-      "execution_count": 40,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -2179,4 +2179,4 @@
       ]
     }
   ]
-} 
+}
